--- a/index.css
+++ b/index.css
@@ -4,7 +4,8 @@
  }
 
  .chat-container {
-     width: 350px;
+     max-width: 100%;
+     width:350px;
      margin: 50px auto;
      background: white;
      border-radius: 10px;
@@ -59,4 +60,5 @@
      color: white;
      border: none;
      cursor: pointer;
+
  }
